# breadkpad-android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/daya/android/breakpad/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/daya/android/breakpad/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/daya/android/breakpad/: ExampleUnitTest.kt
breakpad/: CMakeLists.txt  build.gradle
breakpad/src/androidTest/java/com/daya/breakpad/: ExampleInstrumentedTest.java
breakpad/src/main/: AndroidManifest.xml
breakpad/src/test/java/com/daya/breakpad/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
